[package]
name = "dsj"
version = "0.1.0"
authors = ["alexey <piyanin@gmail.com>"]

[dependencies]
rand = "0.3"
clap = "2.28.0"
diesel = { version = "1.0.0-beta1", features = ["sqlite", "postgres", "mysql"] }
diesel_infer_schema = { version = "1.0.0-beta1", features = ["sqlite", "postgres", "mysql"] }
diesel_migrations = "1.0.0-beta1"
